# dfb3d

./: AUTHORS  COPYING  ChangeLog  Makefile.am  README  configure.in
data/: Makefile.am
src/: Makefile.am  dfb3d.c  main.c  obj3d.c  obj3d.h
